--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -26,7 +26,7 @@
     <EditText
         android:id="@+id/et_name"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="35dp"
         android:hint="이름을 입력하세요"
         android:imeOptions="actionDone"/>
