--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -45,11 +45,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
         android:hint="아이디를 입력하세요"
-        android:imeOptions="actionDone"/>
+        android:imeOptions="actionDone"
+        android:inputType="text"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호(소문자,대문자,특수문자(!,@,#,$,^,*),숫자)"
+        android:text="비밀번호"
         android:textStyle="bold"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
@@ -64,6 +65,12 @@
         android:hint="비밀번호를 입력하세요"
         android:imeOptions="actionDone"
         android:inputType="textPassword"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="8자~16자, 소문자, 대문자, 특수문자 조합."
+        android:layout_marginStart="40dp"
+        android:textColor="@color/great"/>
 
     <TextView
         android:layout_width="wrap_content"
