--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="blue">#2196F3</color>
     <color name="darkBlue">#3F51B5</color>
     <color name="purple">#673AB7</color>
-
+    <color name="great">#787A7A</color>
 </resources>
